# oneAPI-practice

./: README.md
codes/intrinsics/fmadd/_mm256_fmadd_ps01/: CMakeLists.txt  README.md
codes/openmp/info/info01/: README.md
codes/study/helloworld/: README.md
codes/test/_mm256_fmadd_ps/_mm256_fmadd_ps01/: main.cpp
codes/test/_mm256_loadu_ps/_mm256_loadu_ps01/: main.cpp
codes/test/_mm512_add_ps/_mm512_add_ps01/: main.cpp
codes/test/avxtest/: README.md  main.cpp
codes/test/avxtest01/: README.md  main.cpp
codes/test/avxtest02/: README.md  main.cpp
codes/test/avxtest03/: main.cpp
codes/test/avxtest04/: README.md  main.cpp
codes/test/avxtest05/: README.md  main.cpp
codes/test/mm256_set_ps/mm256_set_ps01/: main.cpp
codes/test/mm512_set_ps/mm512_set_ps01/: main.cpp
codes/test/mm512_set_ps/mm512_set_ps02/: main.cpp
codes/test/mm512_set_ps/mm512_set_ps03/: README.md  main.cpp
doc/: windows.md
